After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730722 - Cannot seek in a m4a AAC audio file
Cannot seek in a m4a AAC audio file
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.3.1
Other All
: Normal normal
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-25 15:24 UTC by Jean-François Fortin Tam
Modified: 2014-05-30 18:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jean-François Fortin Tam 2014-05-25 15:24:45 UTC
I have a file here that refuses to seek in Totem 3.12 and Sushi (the Nautilus previewer) using GStreamer 1.2, and Pitivi git (using GStreamer 1.3.x/git).

Pitivi survives the encounter, but Totem and Sushi lock up when trying to seek it.
Comment 1 Jean-François Fortin Tam 2014-05-25 15:25:47 UTC
The sample file: http://jeff.ecchi.ca/public/gstreamer-730722.m4a
Comment 2 Thiago Sousa Santos 2014-05-30 18:04:21 UTC
commit c25d94b7efc9d56b6da79eb3e19274812f777d5d
Author: Thiago Santos <ts.santos@sisa.samsung.com>
Date:   Fri May 30 14:32:42 2014 -0300

    qtdemux: upstream handles seek if fragmented and on time segment
    
    Otherwise we can reject seeks on local files that contain fragmented-like
    atoms like 'mvex'. Also improve a message log
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730722